<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FlowMonitor</string>
    <string name="action_settings">Settings</string>
    <string name="inputPhoneNum">请输入手机号码</string>
    <string name="inputPwd">请输入6-12位密码</string>
    <string name="inputVcode">请输入短信验证码</string>
    <string name="getVcode">获取验证码</string>
    <string name="obtainVcode">重获验证码</string>
    <string name="sure">确定</string>
    <string name="vcode_schedule">秒后重发</string>
    <string name="cancel">取消</string>
    <string name="countryAndRegions">国家和地区</string>
    <string name="score">%1$s分</string>

    <!-- 提示 -->
    <string name="tips_clickTwiceToExit">再按一次退出程序！</string>
    <string name="tips_pwdIsNotFormat">亲，您的密码需6位以上才放心哦！</string>

    <!-- 登录界面 -->
    <string name="login">登录</string>
    <string name="sureLogin">立即登录</string>
    <string name="forgetPWD">忘记密码？</string>

    <!-- 注册界面 -->
    <string name="userProtocol">《XXX用户协议》</string>
    <string name="registering">正在注册</string>
    <string name="exitRegisterUI">确定要退出注册界面吗？</string>
    <string name="register">注册</string>
    <string name="sureRegister">立即注册</string>
    <string name="agree">同意</string>

    <!-- 找回密码 -->
    <string name="title_findPWD">找回密码</string>
    <string name="findPWD_tips">亲，使用您注册过的手机号来找回密码吧！</string>
    <string name="sendPhoneNumber">亲，已经向您的手机%1$s发送验证码，注意查收哦！</string>
    <string name="next">下一步</string>
    <string name="complete">完成</string>
    <string name="phoneNumIsNotFormat">格式不对，请输入正确的手机号码！</string>
    <string name="verificateSuccessfully">亲，恭喜您验证成功，请输入密码！</string>
    <string name="surePwd">确认并再次输入密码</string>
    <string name="pwdIsNotMatched">亲，两次输入的密码不一致哦！</string>

    <!-- 更多设置 -->
    <string name="title_settings">设置</string>
    <string name="userSecurity">账户安全</string>
    <string name="setNotifications">消息提醒设置</string>
    <string name="showPic">是否仅在Wi-Fi下显示图片</string>
    <string name="inviteFriends">邀请好友使用</string>
    <string name="evaluate">为我们点评一下吧</string>
    <string name="about">关于我们</string>
    <string name="update">检查更新</string>
    <string name="clearCache">清除缓存%1$s</string>

    <!-- 第三方登录选项 -->
    <string name="login_qq">QQ登录</string>
    <string name="login_weixin">微信登录</string>
    <string name="login_tencentWeibo">腾讯微博</string>
    <string name="login_renren">人人网</string>
    <string name="login_sinaWeibo">新浪微博</string>

    <!-- 首页底层菜单 -->
    <string name="menuDoctor">流量医生</string>
    <string name="menuFlow">淘流量</string>
    <string name="menuMe">我的</string>

    <!-- 用户中心 -->
    <string name="user_comment">我的评价</string>
    <string name="user_collect">我的收藏</string>
    <string name="user_wallet">我的钱包</string>
    <string name="flow_strategy">流量攻略</string>
    <string name="more_setting">更多设置</string>

    <!-- 商品界面 -->
    <string name="allCategories">全部分类</string>
    <string name="screening">筛选</string>
    <string name="smartSorting">智能排序</string>
    <string name="inputGoodsName">请输入商品名称</string>

    <!-- 智能排序 -->
    <string name="topEvaluate">评价最高</string>
    <string name="lastedRelease">最新发布</string>
    <string name="topSales">销量优先</string>
    <string name="lowestPrice">价格最低</string>
    <string name="highestPrice">价格最高</string>

    <!-- 搜索界面 -->
    <string name="search">搜索</string>
    <string name="searchHistory">最近搜过</string>
    <string name="topSearch">热门搜索</string>
    <string name="clearHistory">清除历史记录</string>
    <string name="isSureClearHistory">确定要清除历史记录吗？</string>

    <!-- 商品详情界面 -->
    <string name="title_goodsDetail">商品详情</string>
    <string name="goodsEvaluates">用户评论（%1$s条）</string>
    <string name="goodsParams">商品参数</string>
    <string name="operators">运营商：%1$s</string>
    <string name="trafficAmount">流量额：%1$s</string>
    <string name="trafficType">流量类型：%1$s</string>
    <string name="trafficStandar">流量制式：%1$s</string>
    <string name="validTime">有效时间：%1$s</string>
    <string name="validArea">有效地区：%1$s</string>

    <!-- 我的评价界面 -->
    <string name="title_evaluate">我的评价</string>
    <string name="evaluate_edit">编辑评价</string>
    <string name="evaluate_totalPrice">总价：%1$s</string>
    <string name="evaluate_goodsNum">数量：%1$s</string>
    
    
    <string-array name="CountryCodes">
        <item>93,AF</item>
        <item>355,AL</item>
        <item>213,DZ</item>
        <item>376,AD</item>
        <item>244,AO</item>
        <item>672,AQ</item>
        <item>54,AR</item>
        <item>374,AM</item>
        <item>297,AW</item>
        <item>61,AU</item>
        <item>43,AT</item>
        <item>994,AZ</item>
        <item>973,BH</item>
        <item>880,BD</item>
        <item>375,BY</item>
        <item>32,BE</item>
        <item>501,BZ</item>
        <item>229,BJ</item>
        <item>975,BT</item>
        <item>591,BO</item>
        <item>387,BA</item>
        <item>267,BW</item>
        <item>55,BR</item>
        <item>673,BN</item>
        <item>359,BG</item>
        <item>226,BF</item>
        <item>95,MM</item>
        <item>257,BI</item>
        <item>855,KH</item>
        <item>237,CM</item>
        <item>1,CA</item>
        <item>238,CV</item>
        <item>236,CF</item>
        <item>235,TD</item>
        <item>56,CL</item>
        <item>86,CN</item>
        <item>61,CX</item>
        <item>61,CC</item>
        <item>57,CO</item>
        <item>269,KM</item>
        <item>242,CG</item>
        <item>243,CD</item>
        <item>682,CK</item>
        <item>506,CR</item>
        <item>385,HR</item>
        <item>53,CU</item>
        <item>357,CY</item>
        <item>420,CZ</item>
        <item>45,DK</item>
        <item>253,DJ</item>
        <item>670,TL</item>
        <item>593,EC</item>
        <item>20,EG</item>
        <item>503,SV</item>
        <item>240,GQ</item>
        <item>291,ER</item>
        <item>372,EE</item>
        <item>251,ET</item>
        <item>500,FK</item>
        <item>298,FO</item>
        <item>679,FJ</item>
        <item>358,FI</item>
        <item>33,FR</item>
        <item>689,PF</item>
        <item>241,GA</item>
        <item>220,GM</item>
        <item>995,GE</item>
        <item>49,DE</item>
        <item>233,GH</item>
        <item>350,GI</item>
        <item>30,GR</item>
        <item>299,GL</item>
        <item>502,GT</item>
        <item>224,GN</item>
        <item>245,GW</item>
        <item>592,GY</item>
        <item>509,HT</item>
        <item>504,HN</item>
        <item>852,HK</item>
        <item>36,HU</item>
        <item>91,IN</item>
        <item>62,ID</item>
        <item>98,IR</item>
        <item>964,IQ</item>
        <item>353,IE</item>
        <item>44,IM</item>
        <item>972,IL</item>
        <item>39,IT</item>
        <item>225,CI</item>
        <item>81,JP</item>
        <item>962,JO</item>
        <item>7,KZ</item>
        <item>254,KE</item>
        <item>686,KI</item>
        <item>965,KW</item>
        <item>996,KG</item>
        <item>856,LA</item>
        <item>371,LV</item>
        <item>961,LB</item>
        <item>266,LS</item>
        <item>231,LR</item>
        <item>218,LY</item>
        <item>423,LI</item>
        <item>370,LT</item>
        <item>352,LU</item>
        <item>853,MO</item>
        <item>389,MK</item>
        <item>261,MG</item>
        <item>265,MW</item>
        <item>60,MY</item>
        <item>960,MV</item>
        <item>223,ML</item>
        <item>356,MT</item>
        <item>692,MH</item>
        <item>222,MR</item>
        <item>230,MU</item>
        <item>262,YT</item>
        <item>52,MX</item>
        <item>691,FM</item>
        <item>373,MD</item>
        <item>377,MC</item>
        <item>976,MN</item>
        <item>382,ME</item>
        <item>212,MA</item>
        <item>258,MZ</item>
        <item>264,NA</item>
        <item>674,NR</item>
        <item>977,NP</item>
        <item>31,NL</item>
        <item>599,AN</item>
        <item>687,NC</item>
        <item>64,NZ</item>
        <item>505,NI</item>
        <item>227,NE</item>
        <item>234,NG</item>
        <item>683,NU</item>
        <item>850,KP</item>
        <item>47,NO</item>
        <item>968,OM</item>
        <item>92,PK</item>
        <item>680,PW</item>
        <item>507,PA</item>
        <item>675,PG</item>
        <item>595,PY</item>
        <item>51,PE</item>
        <item>63,PH</item>
        <item>870,PN</item>
        <item>48,PL</item>
        <item>351,PT</item>
        <item>1,PR</item>
        <item>974,QA</item>
        <item>40,RO</item>
        <item>7,RU</item>
        <item>250,RW</item>
        <item>590,BL</item>
        <item>685,WS</item>
        <item>378,SM</item>
        <item>239,ST</item>
        <item>966,SA</item>
        <item>221,SN</item>
        <item>381,RS</item>
        <item>248,SC</item>
        <item>232,SL</item>
        <item>65,SG</item>
        <item>421,SK</item>
        <item>386,SI</item>
        <item>677,SB</item>
        <item>252,SO</item>
        <item>27,ZA</item>
        <item>82,KR</item>
        <item>34,ES</item>
        <item>94,LK</item>
        <item>290,SH</item>
        <item>508,PM</item>
        <item>249,SD</item>
        <item>597,SR</item>
        <item>268,SZ</item>
        <item>46,SE</item>
        <item>41,CH</item>
        <item>963,SY</item>
        <item>886,TW</item>
        <item>992,TJ</item>
        <item>255,TZ</item>
        <item>66,TH</item>
        <item>228,TG</item>
        <item>690,TK</item>
        <item>676,TO</item>
        <item>216,TN</item>
        <item>90,TR</item>
        <item>993,TM</item>
        <item>688,TV</item>
        <item>971,AE</item>
        <item>256,UG</item>
        <item>44,GB</item>
        <item>380,UA</item>
        <item>598,UY</item>
        <item>1,US</item>
        <item>998,UZ</item>
        <item>678,VU</item>
        <item>39,VA</item>
        <item>58,VE</item>
        <item>84,VN</item>
        <item>681,WF</item>
        <item>967,YE</item>
        <item>260,ZM</item>
        <item>263,ZW</item>
    </string-array>

    <string name="title_activity_find_pwd">FindPWDActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_goods_detail">GoodsDetailActivity</string>
    <string name="title_activity_evaluate">EvaluateActivity</string>

</resources>