<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/lay_home_menu_doctor"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center" >

        <TextView
            android:id="@+id/tv_home_menu_doctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menuDoctor"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_home_menu_flow"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center" >

        <TextView
            android:id="@+id/tv_home_menu_flow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menuFlow"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_home_menu_me"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center" >

        <TextView
            android:id="@+id/tv_home_menu_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menuMe"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>